Let the section headers breathe; add a stop-gap fix for monospaced fonts in Linux (see https://github.com/mattgraham/Midnight/pull/1)

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -257,7 +257,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: monospace, serif;
+  font-family: WorkAroundWebKitAndMozilla, monospace;
   _font-family: 'courier new', monospace;
   font-size: 1em;
 }
@@ -564,6 +564,7 @@ h1 {
 }
 
 h2 {
+  margin-top: 40px;
   font-size: 24px;
 }
 
@@ -623,7 +624,7 @@ blockquote {
 }
 
 code {
-  font-family: "Lucida Sans", Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font-family: "Lucida Sans", Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
   color: #efefef;
   font-size: 13px;
   margin: 0 4px;
